# Agentic-AI-Course-Generator

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/agents/: certificate_agent.py  doubt_rag_agent.py  exam_agent.py  human_approval_node.py  notes_agent.py  planner_agent.py  profile_agent.py  progress_agent.py  quiz_agent.py  transcript_agent.py  tutor_chat_agent.py  youtube_agent.py
app/api/: router.py
app/api/routes/: auth.py  courses.py  tutor.py
app/core/: config.py  security.py
app/db/: models.py  session.py
app/graph/: checkpointer.py  memory.py  state.py  supervisor.py  tool_nodes.py
app/models/: schemas.py
app/rag/: chroma_store.py  retriever.py
app/services/: auth_service.py  course_service.py  exam_service.py  lesson_service.py  progress_service.py  quiz_service.py  tutor_service.py
app/tools/: groq_llm.py  transcript_tool.py  youtube_tool.py
app/utils/: ids.py
frontend-course-creator-ai/: package-lock.json  package.json  tailwind.config.ts
frontend-course-creator-ai/src/: App.tsx  index.css
frontend-course-creator-ai/src/features/approval/: ApprovalPage.tsx
frontend-course-creator-ai/src/features/auth/: LoginPage.tsx  RegisterPage.tsx
frontend-course-creator-ai/src/features/course/: CourseCreatePage.tsx
frontend-course-creator-ai/src/features/exam/: ExamCertPage.tsx
frontend-course-creator-ai/src/features/landing/: LandingPage.tsx
frontend-course-creator-ai/src/shared/lib/: store.ts
migrations/: README  env.py
scripts/: init_db.py
tests/: test_health.py
(+19 files in other folders)
