[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-course-generator"
version = "0.1.0"
description = "Production-style AI Course Generator backend with FastAPI, LangGraph, and RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "asyncpg>=0.30.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-groq>=0.2.0",
  "langgraph>=0.2.30",
  "langgraph-checkpoint-postgres>=2.0.0",
  "langchain-chroma>=0.1.4",
  "langchain-huggingface>=0.1.0",
  "chromadb>=0.5.5",
  "google-api-python-client>=2.143.0",
  "youtube-transcript-api>=0.6.2",
  "httpx>=0.27.0",
  "orjson>=3.10.7",
  "python-dotenv>=1.0.1",
  "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.4",
  "mypy>=1.11.2",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
